--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,90 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+ body.grey {
+ 	background-color: #f5f5f5;
+ }
+
+.container {
+
+ }
+
+
+h1.logo {
+	width: 254px;
+    height: 145px;
+    background: url(logo.png) no-repeat;
+    margin: 40px auto;	
+}
+
+
+.shorten_link {
+    background-color: #fff;
+    border-radius: 4px;
+    border-bottom: 3px solid #e6e6e6;
+    padding: 40px;
+    width: 500px;
+	margin: auto;
+}
+
+.shorten_link h2 {
+	font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.shortenurl {
+	
+	
+}
+
+.url {
+  display: flex;
+  align-items: center;
+}
+
+.field {
+  height: 44px;
+  border: none;
+  font-size: 18px;
+}
+
+  
+#field-url {
+  width: 75%;
+  text-indent: 5%;
+  background-color: #f5f5f5;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 17px 15px;
+  border: 1px solid #dfdfdf;
+  min-height: 24px;
+
+}
+
+
+#btn-url {
+  width: 25%;
+  height: 46px;
+  background: #4FAEDC;
+  font-weight: bold;
+  color: #fff;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  cursor: pointer;
+  transition: background .3s ease-in-out;
+}
+
+footer {
+    background-color: #333;
+    color: #ccc;
+    border-top: 3px solid #4FAEDC;
+    padding-top: 30px;
+    font-size: 1.2rem;
+    font-size: 12px;
+    height: 40px;
+}
