--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -88,3 +88,63 @@ footer {
     font-size: 12px;
     height: 40px;
 }
+
+.list_links {
+    background-color: #fff;
+    border-radius: 4px;
+    border-bottom: 3px solid #e6e6e6;
+    padding: 40px;
+    width: 500px;
+    margin: auto;
+}
+
+.list_links h2 {
+  font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #4FAEDC;
+}
+
+.list_links .field-url {
+  width: 90%;
+  text-indent: 5%;
+  background-color: #f5f5f5;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 17px 15px;
+  border: 1px solid #4FAEDC;
+  min-height: 24px;
+
+}
+
+.list_links .btn-url {
+  width: 10%;
+  height: 46px;
+  background: #fff;
+  font-weight: bold;
+  color: #4FAEDC;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  cursor: pointer;
+  transition: background .3s ease-in-out;
+
+}
+
+.fa-eye {
+  margin: 15px 10px;
+}
+
+.show_link {
+    background-color: #fff;
+    border-radius: 4px;
+    border-bottom: 3px solid #e6e6e6;
+    padding: 40px;
+    width: 800px;
+    margin: auto;
+    
+
+}
+.show_link h2 {
+  text-align: center;
+}
