--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,20 @@
-<div class="title">
-  <h1>Last links</h1>
-  <% @top_links.each do |link| %>
-    <p><%= link.given_url %></p>
-    <p class="title"><%= truncate(link.title, length: 60) %></p>
-    <p class="short_url"><%= link_to display_full_shorturl(link), link.slug, target: '_blank' %></p>
+<section class="shorten_link">
+  <h2>Make your links manageable</h2>
+  <%= render 'layouts/new_link' %>
+</section>
+<section class="list_links">
+  <% unless session[:shrinked_links].nil? %>
+  	<h2>Your links</h2>
+  	<% session[:shrinked_links].each do |link| %>
+  		 <div class="url">
+      		<%= url_field_tag :given_url, display_full_shorturl(link["id"]), :class => "field field-url", :disabled => "true" %>
+      		<%= link_to link_path(link["id"]), html_options = {class: "field btn-url"} do %>
+        		<i class="fa fa-eye"></i>
+		    <% end %>
+		</div>
+  	<% end %>
   <% end %>
-</div>
+</section>
 
 
 
