--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,30 +1,25 @@
 <p id="notice"><%= notice %></p>
+<section class="show_link">
 
-<h1>Listing Links</h1>
+<h2>Top 10 shrinked links</h2>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Given url</th>
       <th>Slug</th>
       <th>Clicks</th>
-      <th>Snapshot</th>
       <th>Title</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @links.each do |link| %>
+    <% @top_links.each do |link| %>
       <tr>
         <td><%= link.given_url %></td>
-        <td><%= link.slug %></td>
+        <td><%= display_full_shorturl(link.id) %></td>
         <td><%= link.clicks %></td>
-        <td><%= link.snapshot %></td>
         <td><%= link.title %></td>
-        <td><%= link_to 'Show', link %></td>
-        <td><%= link_to 'Edit', edit_link_path(link) %></td>
-        <td><%= link_to 'Destroy', link, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +27,4 @@
 
 <br>
 
-<%= link_to 'New Link', new_link_path %>
+</section>
