Make it works again

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   		<div class="container-fluid">
      		<ul class="nav navbar-nav navbar-right">
       			<li><a href="<%= root_path %>"> Home</a> </li>
-      			<li><a href="<%= links_path %>">Top urls</a></li>
+      			<li><a href="<%= links_path %>">Top links</a></li>
       			
       		</ul>
       	</div>	
